feat: update UI create video form
